--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "fabric": "^4.2.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "konva": "^7.2.1",
     "react": "^17.0.1",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-konva": "^17.0.0-0",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-webcam": "^5.2.2",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
