--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "konva": "^7.2.1",
     "react": "^17.0.1",
+    "react-base64-downloader": "^2.1.6",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.1",
     "react-konva": "^17.0.0-0",
