--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "4.0.1",
     "react-webcam": "^5.2.2",
     "redux": "^4.0.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
