--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "use-image": "^1.0.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
