--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "activestorage": "^5.2.4-4",
     "fabric": "^4.2.0",
     "html2canvas": "^1.0.0-rc.7",
     "konva": "^7.2.1",
