--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.1",
     "react-webcam": "^5.2.2",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "use-image": "^1.0.6",
