--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "activestorage": "^5.2.4-4",
+    "b64-to-file": "^1.0.4",
     "fabric": "^4.2.0",
     "html2canvas": "^1.0.0-rc.7",
     "konva": "^7.2.1",
+    "nanoid": "^3.1.20",
     "pg-array": "^0.5.0",
     "react": "^17.0.1",
     "react-base64-downloader": "^2.1.6",
