--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-base64-downloader": "^2.1.6",
     "react-canvas-draw": "^1.1.1",
+    "react-countdown": "^2.3.1",
     "react-countdown-hook": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-konva": "^17.0.0-0",
